# zib

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SECURITY.md  build-spec.md  decisions.md  pipeline-manager-spec.md  pyproject.toml  reference-manager-intent.md  reference-manager-solution.md
.github/workflows/: ci.yml
examples/: INSTALLING.md  README.md
src/zib/app_cli/: main.py
src/zib/app_cli/config/: composition_root.py
src/zib/core/capabilities/add_reference/: add_reference.py
src/zib/core/capabilities/confirm_reference/: confirm_reference.py
src/zib/core/capabilities/diff_reference/: diff_reference.py
src/zib/core/capabilities/init/: init.py
src/zib/core/capabilities/install/: install.py
src/zib/core/capabilities/list_references/: list_references.py
src/zib/core/capabilities/outdated/: outdated.py
src/zib/core/capabilities/read_reference/: read_reference.py
src/zib/core/capabilities/remove_reference/: remove_reference.py
src/zib/core/capabilities/show_reference/: show_reference.py
src/zib/infrastructure/agent_files/: agent_file_store.py
src/zib/infrastructure/git/: git_cli_adapter.py
src/zib/infrastructure/persistence/: content_store.py  lockfile_store.py  manifest_store.py
src/zib/system/: README.md
src/zib/system/authoring/: OVERVIEW.md
src/zib/system/integration/: OVERVIEW.md
src/zib/system/usage/: OVERVIEW.md
tests/capabilities/: add_reference_scenarios.py  confirm_reference_scenarios.py  diff_reference_scenarios.py  init_scenarios.py  install_scenarios.py  list_references_scenarios.py  outdated_scenarios.py  read_reference_scenarios.py  remove_reference_scenarios.py  show_reference_scenarios.py  swap_reference_scenarios.py  test_add_reference.py  test_confirm_reference.py  test_diff_reference.py  test_init.py  test_install.py  test_list_references.py  test_outdated.py  test_read_reference.py  test_remove_reference.py  test_show_reference.py  test_swap_reference.py  test_update_reference.py  test_upgrade_reference.py  update_reference_scenarios.py  upgrade_reference_scenarios.py
tests/entities/lockfile/: test_lock_entry.py
tests/entities/shared/: test_semver.py  test_value_objects.py
tests/gateways/git/fetch/: test_fetch_process.py
tests/gateways/git/notes/: test_diff_stats.py  test_notes_process.py
tests/gateways/git/port/: fake_git_port.py  test_git_port_contract.py
tests/gateways/git/resolve/: test_resolve_process.py
tests/infrastructure/git/: test_git_cli_adapter.py
tests/infrastructure/persistence/: test_real_store_contracts.py
tests/ports/persistence/: fakes.py  test_store_contracts.py
tests/rules/computation/content_hash/: test_content_hash.py
tests/rules/computation/delta/: test_delta.py
tests/rules/computation/inventory/: test_render_inventory.py
tests/rules/computation/version_resolution/: test_version_resolution.py
tests/rules/validation/constraint_drift/: test_constraint_drift.py
tests/rules/validation/manifest_validation/: test_manifest_validation.py
tests/rules/validation/version_churn_agreement/: test_version_churn_agreement.py
(+25 files in other folders)
