[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zib"
version = "0.1.0"
description = "A reference manager for AI coding agents — pin, update, and surface versioned external references (specs, frameworks, conventions) for an agent to read and apply."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Pulkit Sharma", email = "sharmapulkit7466@gmail.com" }]
keywords = ["ai", "agent", "references", "specs", "reference-manager", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "click>=8.1",    # app_cli shell: thin commands, completions, man pages
    "tomlkit>=0.12", # manifest read/write (preserves user formatting) + lockfile emission
]
# IMPORTANT: core/ imports NONE of the above. It is pure stdlib (hashlib, dataclasses,
# enum, re, unicodedata, typing). These deps belong to infrastructure/ and app_cli/ only —
# that is the dependency rule (core depends on nothing) enforced in pyproject form.
# Semver (ranges/comparison) is implemented in pure stdlib inside core (no third-party
# semver lib), so version resolution stays in core without violating the dependency rule.

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/sharmapulkit04/zib"
Repository = "https://github.com/sharmapulkit04/zib"
Issues = "https://github.com/sharmapulkit04/zib/issues"

# Console entry point — single CLI shell (decisions.md D1).
[project.scripts]
zib = "zib.app_cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/zib"]

[tool.pytest.ini_options]
# "src" → `import zib.*`; "." → `import tests.*` so capability tests can import the
# shared fakes/scenarios that live under tests/ (per CLAUDE.md, fakes live in the test tree).
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-q"
